[devices] add settings management
